Refactor software update system
* [Opkg.py] Refactor code

- Sort and optimize imports and improve some variable names.
- Replace file I/O with fileReadLines() and fileWriteLine() methods.
- Expand the CMD and EVENT types.
- Add methods to convert CMD and EVENT codes into text strings for logging.
- Add package exclude list processing.
- Specify "opkg" as a fully qualified path to avoid command hijacking.
- Use the ARGV style (list of arguments) for command processing.
- Directly execute /usr/bin/opkg rather than kicking off a shell.
- Remove the "-test" command line option, which is invalid, with the "--noaction" command line option to facilitate non destructive testing of the code.
- Any "busybox" updates are excluded from the upgrade stream and a flag is set to trigger the BusyBox upgrade just prior to a restart.  This task is handled by the enigma2.sh" shell script.
- Optimize the opkg command output text processing.  Use a single buffer with a buffer pointer to extract each line from the command output.  This eliminates all the string copying and concatination.
- Optimize the parsing of the "opkg" output by doing a white space split of the lines rather than a single space character.
- Keep the original command output for debug logging.
- Enable the extraction and use of more "opkg" events with extended callbacks to the calling code.
- Only allow one entry for each callback into the callbackList.  Don't crash if a callback has already been removed.
- Don't send multiple newlines to "opkg" via the write() method.
- Add a large comment for the parseLine() method to demonstrate the syntax of "opkg" output that is processed.
- Improve, simplify and optimise the OpenATV provided exclude code.
- Simplify the command execution logic.
- Add a mechanism to sequence the opkg runs so that the information is not overlapped and lost.
- Make the debug logging of the opkg output configurable via the debug config settings screen.

* [SoftwareUpdate.py] Refactor code

- This cha

--- a/tools/enigma2.sh.in
+++ b/tools/enigma2.sh.in
@@ -9,6 +9,18 @@ if [ -d /home/root ]; then
 	cd
 fi
 
+# Function to determine if a BusyBox update has been flagged and do the update.
+# This code should be run just before a restart to ensure that any shell changes
+# do not impact running code.
+#
+function check_busybox_update {
+	if [ -e /etc/enigma2/.busybox_update_required ]; then
+		DEFERRED=`cat /etc/enigma2/.busybox_update_required`
+		rm /etc/enigma2/.busybox_update_required
+		${DEFERRED} 2>&1 | tee -a /home/root/opkgupgrade.log
+	fi
+}
+
 # any debuglevel passed?
 if [ -z $ENIGMA_DEBUG_LVL ]; then
 	DEBUG_LVL=3
@@ -51,7 +63,6 @@ while : ; do
 		LD_PRELOAD=$LIBS ENIGMA_DEBUG_LVL=$DEBUG_LVL @bindir@/enigma2 >> $file 2>&1
 	fi
 
-
 	# enigma2 exit codes:
 	#
 	#  1 - halt
@@ -69,9 +80,11 @@ while : ; do
 	ret=$?
 	case $ret in
 		1)
+			check_busybox_update
 			/sbin/halt
 			;;
 		2)
+			check_busybox_update
 			/sbin/reboot
 			;;
 		3)
@@ -83,6 +96,7 @@ while : ; do
 			sleep 1;
 			/sbin/rmmod fp
 			/sbin/modprobe fp
+			check_busybox_update
 			/sbin/reboot
 			;;
 		5)
@@ -108,10 +122,6 @@ while : ; do
 			prevupd=0
 			currupd=999
 			opkg update 2>&1 | tee /home/root/opkgupgrade.log
-			# check if we need to upgrade busybox first
-			if [ "$(opkg list-upgradable busybox)" != "" ]; then
-				opkg update busybox 2>&1 | tee -a /home/root/opkgupgrade.log
-			fi
 			# update all other packages
 			while [ $currupd -gt 0 -a $currupd -ne $prevupd ]; do
 				opkg upgrade $DESTS 2>&1 | tee -a /home/root/opkgupgrade.log
@@ -119,6 +129,7 @@ while : ; do
 				currupd=`opkg list-upgradable | wc -l`
 				echo "===> $currupd PACKAGE(S) REMAINING" >> /home/root/opkgupgrade.log
 			done
+			check_busybox_update
 			/sbin/reboot
 			;;
 		43)
