configure: set ARFLAGS to prevent warnings
This commit changes ARFLAGS and AR_FLAGS to prevent the following warnings:
ar: `u' modifier ignored since `D' is the default (see `U')

It seems there is a patch available for hardknott, but still not applied in OE
https://www.mail-archive.com/openembedded-core@lists.openembedded.org/msg155958.html

--- a/configure.ac
+++ b/configure.ac
@@ -263,6 +263,11 @@ CXXFLAGS="$CXXFLAGS -Wall -Wextra -Werror \
 	-Wno-error=packed -Wno-error=vla -Wno-error=clobbered -Wno-error=unused-parameter \
 	$BASE_CFLAGS $ENIGMA2_CFLAGS $PTHREAD_CFLAGS $OPENMP_CFLAGS $ALSA_CFLAGS"
 
+ARFLAGS="cr"
+AC_SUBST(ARFLAGS)
+AR_FLAGS="cr"
+AC_SUBST(AR_FLAGS)
+
 AC_CONFIG_FILES([
 Makefile
 data/Makefile
