--- a/.github/workflows/enigma2.yml
+++ b/.github/workflows/enigma2.yml
@@ -2,9 +2,9 @@ name: Enigma2 CI
 
 on:
   push:
-    branches: [ python3 ]
+    branches: [ master ]
   pull_request:
-    branches: [ python3 ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -44,7 +44,7 @@ jobs:
         sudo apt-get install libgif-dev
         sudo apt-get install mm-common
     - name: build enigma2 dependencies
-      env: 
+      env:
         CC: "gcc-${{ matrix.gcc }}"
         CXX: "g++-${{ matrix.gcc }}"
       run: |
@@ -86,7 +86,7 @@ jobs:
       run: |
         sed -i 's/eFatal/eDebug/g' lib/gdi/gfbdc.cpp
     - name: build enigma2
-      env: 
+      env:
         CC: "gcc-${{ matrix.gcc }}"
         CXX: "g++-${{ matrix.gcc }}"
       run: |
