--- a/lib/python/Components/Makefile.am
+++ b/lib/python/Components/Makefile.am
@@ -16,9 +16,9 @@ install_PYTHON = \
 	PluginList.py PluginComponent.py RecordingConfig.py About.py UsageConfig.py \
 	FIFOList.py ServiceEventTracker.py Input.py TimerSanityCheck.py FileList.py \
 	MultiContent.py MediaPlayer.py TunerInfo.py VideoWindow.py ChoiceList.py \
-	Element.py Playlist.py ParentalControl.py \
+	Element.py Playlist.py ParentalControl.py International.py \
 	Opkg.py SelectionList.py Scanner.py SystemInfo.py PackageInfo.py \
 	Task.py Console.py ResourceManager.py TuneTest.py \
 	Keyboard.py Sensors.py FanControl.py HdmiCec.py RcModel.py \
-	Netlink.py InputHotplug.py \
+	Netlink.py InputHotplug.py LocaleSelection.py \
 	ImportChannels.py
