--- a/tools/enigma2.sh.in
+++ b/tools/enigma2.sh.in
@@ -16,10 +16,7 @@ else
 	DEBUG_LVL=$ENIGMA_DEBUG_LVL
 fi
 
-# LC_ALL available?
-if [ -z $LC_ALL ]; then
-	export LC_ALL=en_GB.utf8
-fi
+export LC_CTYPE="en_US.UTF-8"
 
 LIBS=@libdir@/libopen.so.0.0.0
 
