--- a/lib/python/Components/Renderer/Makefile.am
+++ b/lib/python/Components/Renderer/Makefile.am
@@ -1,6 +1,20 @@
 installdir = $(pkglibdir)/python/Components/Renderer
 
 install_PYTHON = \
-	__init__.py Label.py Progress.py Listbox.py Renderer.py Pixmap.py \
-	FixedLabel.py PositionGauge.py Canvas.py CiModuleControl.py Picon.py Pig.py \
-	FrontpanelLed.py ChannelNumber.py VideoSize.py NextEpgInfo.py GaugeRender.py
+	__init__.py \
+	Canvas.py \
+	ChannelNumber.py \
+	CiModuleControl.py \
+	FixedLabel.py \
+	FrontpanelLed.py \
+	GaugeRender.py \
+	Label.py \
+	Listbox.py \
+	NextEpgInfo.py \
+	Picon.py \
+	Pig.py \
+	Pixmap.py \
+	PositionGauge.py \
+	Progress.py \
+	Renderer.py \
+	VideoSize.py
