--- a/lib/python/Components/Sources/Makefile.am
+++ b/lib/python/Components/Sources/Makefile.am
@@ -1,7 +1,24 @@
 installdir = $(pkglibdir)/python/Components/Sources
 
 install_PYTHON = \
-	__init__.py Clock.py EventInfo.py Source.py List.py CurrentService.py \
-	FrontendStatus.py Boolean.py Config.py ServiceList.py RdsDecoder.py StreamService.py \
-	StaticText.py CanvasSource.py ServiceEvent.py Event.py FrontendInfo.py TunerInfo.py \
-	RecordState.py Progress.py Sensor.py
+	__init__.py \
+	Boolean.py \
+	CanvasSource.py \
+	Clock.py \
+	Config.py \
+	CurrentService.py \
+	Event.py \
+	EventInfo.py \
+	FrontendInfo.py \
+	FrontendStatus.py \
+	List.py \
+	Progress.py \
+	RdsDecoder.py \
+	RecordState.py \
+	Sensor.py \
+	ServiceEvent.py \
+	ServiceList.py \
+	Source.py \
+	StaticText.py \
+	StreamService.py \
+	TunerInfo.py
