Refactor Recording and Timeshift settings
Remove RecordPath.py and move functionality into new Recording.py and Timeshift.py modules.

Co-authored-by: IanSav <IanSav@users.noreply.github.com>

--- a/lib/python/Screens/Makefile.am
+++ b/lib/python/Screens/Makefile.am
@@ -42,7 +42,7 @@ install_PYTHON = \
 	PluginBrowser.py \
 	PVRState.py \
 	RdsDisplay.py \
-	RecordPaths.py \
+	Recording.py \
 	Satconfig.py \
 	ScanSetup.py \
 	Scart.py \
@@ -71,6 +71,7 @@ install_PYTHON = \
 	TimerEdit.py \
 	TimerEntry.py \
 	TimerSelection.py \
+	Timeshift.py \
 	UnhandledKey.py \
 	VirtualKeyBoard.py \
 	Volume.py \
