--- a/lib/python/Tools/Makefile.am
+++ b/lib/python/Tools/Makefile.am
@@ -21,7 +21,7 @@ install_PYTHON = \
 	Import.py \
 	ISO639.py \
 	LoadPixmap.py \
-	Multiboot.py \
+	MultiBoot.py \
 	Notifications.py \
 	NumericalTextInput.py \
 	Profile.py \
