[Ci.py] Rename module and bugfix
* Rename to "CommonInterface.py"
* Fix bug in "ConfigPin" call

--- a/lib/python/Screens/Makefile.am
+++ b/lib/python/Screens/Makefile.am
@@ -7,7 +7,7 @@ install_PYTHON = \
 	AutoDiseqc.py \
 	ChannelSelection.py \
 	ChoiceBox.py \
-	Ci.py \
+	CommonInterface.py \
 	Console.py \
 	Dish.py \
 	DVD.py \
