[CamControl.py] Small refactor
* Rename module using camelCase
* Sort and improve imports
* Improve print statements and text expressions

--- a/lib/python/Tools/Makefile.am
+++ b/lib/python/Tools/Makefile.am
@@ -5,7 +5,7 @@ install_PYTHON = \
 	Alternatives.py \
 	ASCIItranslit.py \
 	BoundFunction.py \
-	camcontrol.py \
+	CamControl.py \
 	CIHelper.py \
 	CList.py \
 	CopyFiles.py \
